# observability-agent

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly-ledger-verify.yml
docker/: docker-compose.observability.yml  prometheus.yml  tempo.yaml
docs/: BRANCH_PROTECTION.md  OVERVIEW.md
eval/: dataset.py  run_eval.py
obsvagent/: __init__.py  cost.py  gateway.py  graph.py  ids.py  interfaces.py  ledger.py  ledger_writer.py  middleware.py  otel.py  pricing.yaml  schema.py  sink.py
obsvagent/alerting/: __init__.py  baselines.py  dispatch.py  drift.py  evaluators.py  model.py
obsvagent/api/: main.py
obsvagent/checker/: __init__.py  judge.py  node.py  schema.py  tier1.py
obsvagent/cli/: verify_ledger.py
obsvagent/db/: __init__.py  dao.py  env.py  migrations.py  retention.py  review_queue_writer.py  writer.py
obsvagent/monitoring/: __init__.py  guard.py  workflows.py
scripts/: apply_migrations.py  bench_middleware.py  run_retention.py
tests/: test_baselines.py  test_checker_node.py  test_contracts.py  test_cost.py  test_dispatch.py  test_drift.py  test_evaluators.py  test_fresh_import.py  test_gateway.py  test_graph.py  test_guard.py  test_judge.py  test_ledger_writer.py  test_middleware.py  test_sink.py  test_tier1.py  test_verify_ledger_cli.py
tests/integration/: conftest.py  test_neon_api.py  test_neon_dao.py  test_neon_grants.py  test_neon_ledger.py  test_neon_retention.py  test_neon_writer.py
web/: .env.local.example  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx
(+5 files in other folders)
